# pravda

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.browser  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 06eb381b8ec5_initial_schema.py  f2c15ccc6215_initial_schema.py
pravda/: __init__.py  __main__.py  api.py  capture.py  constants.py  db.py  har.py  http_archive.py  pravda.py  session.py  snapshots.py  storage.py
src/pravda/: __init__.py  capture.py  db.py  http_archive.py  migrate.py  pravda.py  snapshots.py  storage.py
src/pravda/migrations/: env.py
src/pravda/migrations/versions/: 06eb381b8ec5_initial_schema.py
tests/: conftest.py  test_capture_observer.py  test_finalize_failures.py  test_http_archive.py  test_list_snapshots.py  test_migration.py  test_pravda.py  test_session.py  test_snapshot.py  test_snapshot_deadline.py  test_snapshot_timeouts.py  test_snapshots_library.py  test_storage.py
tests/fixtures/: blocking.html  example.html
