[project]
name = "pravda"
version = "0.1.0"
description = "Evidence layer: durable evidence capture of web pages (HAR, screenshots, rendered HTML, plaintext)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "fsspec[gcs]>=2026.4.0",
    "playwright>=1.60.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest-env>=1.1.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pytest_env]
DATABASE_URL = "postgresql+asyncpg://pravda:pravda@localhost:5433/pravda_test"
TEST_DATABASE_URL = "postgresql+asyncpg://pravda:pravda@localhost:5433/pravda_test"
BROWSER_WS_URL = "ws://localhost:3000"
STORAGE_BASE_PATH = "/tmp/pravda-test-blobs"
