[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[project]
name = "opensanctions-pravda"
version = "0.1.1"
description = "Durable web evidence capture with a remote browser, Postgres, and content-addressed storage"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "OpenSanctions" }]
keywords = [
    "evidence",
    "web-archiving",
    "web-capture",
    "playwright",
    "har",
    "forensics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.15.0",
    "fsspec[gcs]>=2026.4.0",
    "playwright>=1.60.0",
    "sqlalchemy[asyncio]>=2.0.50",
]

[project.urls]
Homepage = "https://github.com/opensanctions/pravda"
Documentation = "https://github.com/opensanctions/pravda#readme"
Repository = "https://github.com/opensanctions/pravda"
Issues = "https://github.com/opensanctions/pravda/issues"

[tool.uv.build-backend]
module-name = "pravda"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
